# notifications-admin

./: .cfignore  .ds.baseline  .env  .flake8  .gitignore  .jshintrc  .pa11yci  .pre-commit-config.yaml  .profile  CONTRIBUTING.md  Dockerfile  LICENSE.md  Makefile  Pipfile  Procfile  README.md  application.log.json  application.py  backstop.config.js  dependabot.yml  docker-compose.devcontainer.yml  docker-compose.yml  get_zendesk_tickets.py  gulpfile.js  gunicorn_config.py  gunicorn_entry.py  manifest.yml  newrelic.ini  notify-admin-web-entrypoint.sh  pa11y-results.txt  package-lock.json  package.json  poetry-deps-tree.txt  print_vcap.sh  pyproject.toml  pytest.ini  render.yaml  requirements.in  requirements.txt  sample.env  (+5 more)
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: BUG-TEMPLATE.yml  bug_template.yml  issue_template.yaml  issue_template.yml  manual_qa_template.yml
.github/workflows/: checks.yml  codeql.yml  daily_checks.yml  deploy-demo.yml  deploy-prod.yml  deploy.yml  drift.yml  terraform-demo.yml  terraform-production.yml  terraform-staging.yml
__mocks__/: charts.js
app/: __init__.py  asset_fingerprinter.py  cloudfoundry_config.py  config.py  custom_auth.py  enums.py  event_handlers.py  extensions.py  formatters.py  navigation.py  statistics_utils.py  template_previews.py  url_converters.py  webauthn_server.py
app/.well-known/: security.txt
app/broadcast_areas/: create-broadcast-areas-db.py  repo.py
app/content/: get-started.md
app/main/: __init__.py  _commonly_used_passwords.py  forms.py  validators.py
app/models/: __init__.py  contact_list.py  event.py  job.py  organisation.py  organization.py  service.py  spreadsheet.py  template_list.py  user.py
app/notify_client/: __init__.py  api_key_api_client.py  billing_api_client.py  broadcast_message_api_client.py  email_branding_client.py  invite_api_client.py  job_api_client.py  letter_branding_client.py  notification_api_client.py  org_invite_api_client.py  organisations_api_client.py  organizations_api_client.py  performance_dashboard_api_client.py  service_api_client.py  status_api_client.py  template_folder_api_client.py  template_statistics_api_client.py  upload_api_client.py  user_api_client.py
app/redis_client/: redis_client.py
app/s3_client/: __init__.py  s3_csv_client.py  s3_logo_client.py  s3_mou_client.py
app/templates/: admin_pilot_template.html  admin_template.html  base.html  content_template.html  fullwidth_template.html  main_nav.html  main_template.html  org_nav.html  org_template.html  service_navigation.html  settings_nav.html  settings_template.html  withnav_template.html  withoutnav_template.html
app/utils/: __init__.py  api_health.py  branding.py  csv.py  email_domains.txt  letters.py  login.py  navigation_dictionaries.py  pagination.py  redis_util.py  s3_csv.py  templates.py  time.py  user.py  user_permissions.py
backstop_data/html_report/: config.js  diff.js  index_bundle.js
deploy-config/: demo.yml  production.yml  sandbox.yml  staging.yml
deploy-config/egress_proxy/: notify-admin-demo.allow.acl  notify-admin-demo.deploy.acl  notify-admin-production.allow.acl  notify-admin-production.deploy.acl  notify-admin-staging.allow.acl  notify-admin-staging.deploy.acl
devcontainer-admin/: .devcontainer.json  Dockerfile
devcontainer-admin/scripts/: notify-admin-entrypoint.sh
docker/: Dockerfile
docs/: Digital.gov Blog Draft-Notify.gov Out of Pilot.docx  Investing in notifications_ TTS Public Benefits Studio decision memo.docx  Studio research snapshot_ July '22 (External).docx  Studio research snapshot_ July '22 (Internal).docx  api-research-allowance-count-down.md  backstop.md  debug-issues-with-staging-api.md  docker-remote-containers.md  downloadable_reports.md  end_to_end_tests.md  feature-flagging.md  login_dot_gov.md  manual-a11y-checklist.md  notify-pilot-flyer.md  notify-pilot-info.md  sprint-goals.md
local/compose-scripts/: notify-admin-entrypoint.sh
local/scripts/: notify-admin-web-entrypoint.sh
notifications_python_client/: __init__.py  authentication.py  base.py  errors.py  notifications.py  utils.py
notifications_utils/: __init__.py  base64_uuid.py  field.py  formatters.py  insensitive_dict.py  international_billing_rates.py  international_billing_rates.yml  letter_timings.py  logging.py  markdown.py  postal_address.py  recipients.py  request_helper.py  s3.py  safe_string.py  sanitise_text.py  serialised_model.py  take.py  template.py  template_change.py  timezones.py  url_safe_token.py
notifications_utils/countries/: __init__.py  data.py
notifications_utils/jinja_templates/: broadcast_preview_template.jinja2  email_template.jinja2  letter_image_template.jinja2
paas-failwhale/: index.html
scripts/: run_app_paas.sh
terraform/: README.md  create_service_account.sh  destroy_service_account.sh  set_space_egress.sh
terraform/bootstrap/: import.sh  main.tf  providers.tf  run.sh  teardown_creds.sh  variables.tf
terraform/demo/: main.tf  providers.tf  variables.tf
terraform/development/: main.tf  providers.tf  reset.sh  run.sh  variables.tf
terraform/production/: main.tf  providers.tf
terraform/sandbox/: main.tf  providers.tf
terraform/staging/: main.tf  providers.tf
tests/: __init__.py  conftest.py
tests/app/: __init__.py  test_accessibility_statement.py  test_assets.py  test_cloudfoundry_config.py  test_config.py  test_event_handlers.py  test_navigation.py  test_statistics_utils.py  test_utils.py  test_zap_security_fixes.py
tests/end_to_end/: conftest.py  test_a11y.py  test_accounts_page.py  test_best_practices_content_pages.py  test_campaign_manager_story.py  test_create_new_template.py  test_email_revalidation_process.py  test_invite_team_member_to_service.py  test_landing_and_sign_in_pages.py  test_send_message_from_existing_template.py  test_sign_in_flow.py
tests/javascripts/: activityChart.test.js  authenticateSecurityKey.test.js  chartDashboard.test.js  collapsibleCheckboxes.test.js  colourPreview.test.js  cookieMessage.test.js  copyToClipboard.test.js  dashboardVisualization.test.js  main.test.js  (+24 more)
(+877 files in other folders)
