[tool.poetry]
name = "notifications-admin"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
axe-core-python = "^0.1.0"
python = "^3.13.2"
ago = "~=0.1.0"
beautifulsoup4 = "^4.13.5"
blinker = "~=1.8"
gevent = "==25.9.1"
exceptiongroup = "==1.3.0"
flask = "~=3.1"
flask-basicauth = "~=0.2"
flask-login = "^0.6"
flask-talisman = "*"
flask-wtf = "^1.2"
gunicorn = {version = "==23.0.0", extras = ["gevent"]}
hypothesis = "^6.138.15"
humanize = "~=4.13"
itsdangerous = "~=2.2"
jinja2 = "^3.1.6"
newrelic = "^10.17.0"
pyexcel = "==0.7.3"
pyexcel-io = "==0.6.7"
pyexcel-ods3 = "==0.6.1"
pyexcel-xls = "==0.7.1"
pyexcel-xlsx = "==0.6.1"
openpyxl = "==3.0.10"
pyproj = "==3.7.2"
python-dotenv = "==1.1.1"
rtreelib = "==0.2.0"
werkzeug = "^3.1.3"
wtforms = "~=3.1"
markdown = "^3.9"
mistune = "^3.1.4"
async-timeout = "^5.0.1"
bleach = "^6.1.0"
boto3 = "^1.35.99"
botocore = "^1.35.99"
cachetools = "^6.2.0"
cffi = "^2.0.0"
cryptography = "^46.0.1"
flask-redis = "^0.4.0"
geojson = "^3.1.0"
jmespath = "^1.0.1"
numpy = "^2.3.3"
ordered-set = "^4.1.0"
phonenumbers = "^9.0.14"
pycparser = "^2.23"
pyjwt = "^2.10.1"
python-json-logger = "^3.3.0"
redis = "^6.4.0"
regex = "^2025.9.1"
s3transfer = "^0.10.2"
shapely = "^2.1.1"
smartypants = "^2.0.1"
certifi = "^2025.8.3"
charset-normalizer = "^3.4.3"
click = "^8.3.0"
idna = "^3.7"
markupsafe = "^3.0.2"
python-dateutil = "^2.9.0.post0"
pyyaml = "^6.0.1"
requests = "^2.32.5"
six = "^1.16.0"
urllib3 = "^2.5.0"
webencodings = "^0.5.1"
virtualenv = "<20.35"


[tool.poetry.group.dev.dependencies]
awscli = "^1.34.29"
bandit = "*"
black = "^25.9.0"
coverage = "*"
detect-secrets = "^1.5.0"
freezegun = "^1.5.5"
flake8 = "^7.3.0"
flake8-bugbear = "^24.12.12"
flake8-print = "^5.0.0"
flake8-pytest-style = "^2.1.0"
isort = "^6.0.1"
jinja2-cli = {version = "==0.8.2", extras = ["yaml"]}
moto = "*"
pip-audit = "*"
pre-commit = "^4.3.0"
pytest = "^8.4.2"
pytest-env = "^1.1.3"
pytest-mock = "^3.15.1"
pytest-playwright = "^0.7.1"
pytest-xdist = "^3.8.0"
radon = "^6.0.1"
requests-mock = "^1.11.0"
vulture = "^2.14"
poetry-dotenv-plugin = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."poetry.application.plugin"]
dotenv = "poetry_dotenv_plugin.plugin:PoetryDotenvPlugin"
