[tool.poetry]
name = "notifications-admin"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
axe-core-python = "^0.1.0"
python = "^3.13.2"
ago = "~=0.1.0"
beautifulsoup4 = "^4.14.3"
blinker = "~=1.8"
gevent = "==25.9.1"
exceptiongroup = "==1.3.1"
flask = "~=3.1"
flask-basicauth = "~=0.2"
flask-login = "^0.6"
flask-talisman = "*"
flask-wtf = "^1.2"
gunicorn = {version = "==25.1.0", extras = ["gevent"]}
hypothesis = "^6.151.9"
humanize = "~=4.15"
itsdangerous = "~=2.2"
jinja2 = "^3.1.6"
newrelic = "^11.4.0"
pyexcel = "==0.7.4"
pyexcel-io = "==0.6.7"
pyexcel-ods3 = "==0.6.1"
pyexcel-xls = "==0.7.1"
pyexcel-xlsx = "==0.6.1"
openpyxl = "==3.0.10"
pyproj = "==3.7.2"
python-dotenv = "==1.2.1"
rtreelib = "==0.2.0"
werkzeug = "^3.1.5"
wtforms = "~=3.1"
markdown = "^3.10"
mistune = "^3.2.0"
async-timeout = "^5.0.1"
bleach = "^6.3.0"
boto3 = "^1.35.99"
botocore = "^1.35.99"
cachetools = "^7.0.1"
cffi = "^2.0.0"
cryptography = "^46.0.5"
flask-redis = "^0.4.0"
geojson = "^3.1.0"
jmespath = "^1.1.0"
numpy = "^2.4.2"
ordered-set = "^4.1.0"
phonenumbers = "^9.0.24"
pycparser = "^3.0"
pyjwt = "^2.11.0"
python-json-logger = "^4.0.0"
redis = "^7.2.0"
regex = "^2026.1.15"
s3transfer = "^0.10.2"
shapely = "^2.1.2"
smartypants = "^2.0.1"
certifi = "^2026.1.4"
charset-normalizer = "^3.4.4"
click = "^8.3.1"
idna = "^3.11"
markupsafe = "^3.0.3"
python-dateutil = "^2.9.0.post0"
pyyaml = "^6.0.3"
requests = "^2.32.5"
six = "^1.16.0"
urllib3 = "^2.6.3"
webencodings = "^0.5.1"
virtualenv = "<20.39"


[tool.poetry.group.dev.dependencies]
awscli = "^1.34.29"
bandit = "*"
black = "^26.1.0"
coverage = "*"
detect-secrets = "^1.5.0"
freezegun = "^1.5.5"
flake8 = "^7.3.0"
flake8-bugbear = "^25.11.29"
flake8-print = "^5.0.0"
flake8-pytest-style = "^2.2.0"
isort = "^8.0.0"
jinja2-cli = {version = "==1.0.0", extras = ["yaml"]}
moto = "*"
pip-audit = "*"
pre-commit = "^4.5.1"
pytest = "^9.0.2"
pytest-env = "^1.5.0"
pytest-mock = "^3.15.1"
pytest-playwright = "^0.7.2"
pytest-xdist = "^3.8.0"
radon = "^6.0.1"
requests-mock = "^1.11.0"
vulture = "^2.14"
poetry-dotenv-plugin = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."poetry.application.plugin"]
dotenv = "poetry_dotenv_plugin.plugin:PoetryDotenvPlugin"
